fix: ingress, added ingress class

--- a/kubernetes/04-ingress.yaml
+++ b/kubernetes/04-ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: ingress-chuck
   namespace: chuck
 spec:
+  ingressClassName: nginx
   rules:
   - host: "chuck.tfcsummit.douglasramiro.me"
     http:
